<resources>
    <string name="app_name">News App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="news">News</string>
    <string name="cnn">CNN</string>
    <string name="bbc">BBC</string>
    <string name="republic_bharat">Republic Bharat</string>
    <string name="damoh_news">Damoh News</string>
    <string name="upcoming">Upcoming</string>
    <string name="dainik_bhaskar">Dainik Bhaskar</string>
    <string name="patrika">Patrika</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Logo</string>
    <string name="designed_by_luv_k_sahu">Designed by Luv_k_sahu</string>
</resources>